# make-pico

./: README.md
hello_freertos/: CMakeLists.txt
hello_freertos/hello_freertos/: CMakeLists.txt  hello_freertos.c
